tests/NormalTests/paczka1/fuzzy1/17558531.err
Error in line 5: llAFzzRu A431 -5,6
Error in line 15: SOT A392 75,6
Error in line 29: 1VbItp S916 32,8
Error in line 30: 1VbItp A431 64,7
Error in line 33: PvcT A392 61,1
Error in line 35: PvcT S916 67,3
Error in line 4: llAFzzRu A431 73,7
